--- a/templates/occupations-html.html
+++ b/templates/occupations-html.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE = HTML>
 <html>
 
@@ -25,7 +26,9 @@
 			{%endfor%}
 		</tr>
     </table>
-	
+
+    <p>{{random_occ}}</p>
+    
   </body>
   
 </html>
