doesnt work. view function error

--- a/login/templates/textbox.html
+++ b/login/templates/textbox.html
@@ -5,15 +5,15 @@
 </head>
 <body>
   <h1>test</h1>
+  <p>{{message}}</p>
   <form action="/authenticate/" method="post">
     <input type="text" name="username" value="username">
     <br>
     <input type="text" name="password" value="password">
     <br>
-    <input type="submit" name="login" value="login">
+    <input type="submit" name="submit" value="login">
     <br>
-  <form action="/failed" method="post">
-    <input type="submit" name="register" value="register">
+    <input type="submit" name="submit" value="register">
   </form>
 </body>
 </html>
