--- a/login/templates/worked.html
+++ b/login/templates/worked.html
@@ -5,5 +5,9 @@
 </head>
 <body>
  <p>welcome!</p>
+ <br>
+ <form action="/logout/">
+   <input type="submit" name= "logout" value="logout">
+ </form>
 </body>
 </html>
